tests/ui/traits/vtable/vtable-missing-method-impl.stderr
error[E0046]: not all trait items implemented, missing: `method`
  --> $DIR/vtable-missing-method-impl.rs:10:1
   |
LL |     fn method(&self);
   |     ----------------- `method` from trait
LL | }
LL | impl<T: Sync> Bar for T {
   | ^^^^^^^^^^^^^^^^^^^^^^^ missing `method` in implementation

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0046`.
